objects/afdsf__AfrousDashboard__c.object
<CustomObject>
    <fields>
        <fullName>afdsf__Data2__c</fullName>
        <label>Data2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>afdsf__Data3__c</fullName>
        <label>Data3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>afdsf__Data4__c</fullName>
        <label>Data4</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>afdsf__DataType__c</fullName>
        <defaultValue>&quot;dashboard&quot;</defaultValue>
        <label>DataType</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>afdsf__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>afdsf__Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>afdsf__Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <label>Afrous Dashboard</label>
    <listViews>
        <fullName>Nolan_Daigle_AfrousDashboard</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>